Refactor nickname targeting based on feedback
Add configurable nickname argument scope and use vanilla-first nickname fallback with shared resolution logic.