@@ -1,90 +1,71 @@
 package com.fibermc.essentialcommands.mixin;
 
-import java.util.Collections;
 import java.util.List;
 
-import com.fibermc.essentialcommands.playerdata.PlayerData;
-import com.fibermc.essentialcommands.playerdata.PlayerDataManager;
+import com.fibermc.essentialcommands.access.EntitySelectorNicknameAccess;
+import com.fibermc.essentialcommands.commands.NicknameTargetResolver;
+import com.fibermc.essentialcommands.types.NicknameCommandArgMode;
 import org.spongepowered.asm.mixin.Final;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Shadow;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
-
 import net.minecraft.commands.CommandSourceStack;
 import net.minecraft.commands.arguments.selector.EntitySelector;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.entity.Entity;
 
+import static com.fibermc.essentialcommands.EssentialCommands.CONFIG;
+
 /**
- * Adds Essential Commands nickname fallback to vanilla literal player
- * selectors. Vanilla usernames retain priority, and @ selectors are
- * unaffected because they do not populate EntitySelector.playerName.
+ * Adds nickname fallback after vanilla EntitySelector resolution when global
+ * nickname command arguments are enabled.
  */
 @Mixin(EntitySelector.class)
-public abstract class EntitySelectorNicknameMixin {
+public abstract class EntitySelectorNicknameMixin implements EntitySelectorNicknameAccess {
     @Shadow
     @Final
     private String playerName;
 
-    @Inject(method = "findPlayers", at = @At("HEAD"), cancellable = true)
+    @Override
+    public String ec$getPlayerName() {
+        return this.playerName;
+    }
+
+    @Inject(method = "findPlayers", at = @At("RETURN"), cancellable = true)
     private void ec$resolveNicknameForPlayers(
         CommandSourceStack source,
         CallbackInfoReturnable<List<ServerPlayer>> cir
     ) {
-        ServerPlayer player = ec$resolveLiteralPlayer(source);
+        if (
+            CONFIG.NICKNAMES_AS_COMMAND_ARG != NicknameCommandArgMode.Everywhere
+            || !cir.getReturnValue().isEmpty()
+        ) {
+            return;
+        }
+
+        ServerPlayer player = NicknameTargetResolver.resolveLiteralPlayer(this.playerName);
         if (player != null) {
-            cir.setReturnValue(Collections.singletonList(player));
+            cir.setReturnValue(List.of(player));
         }
     }
 
-    @Inject(method = "findEntities", at = @At("HEAD"), cancellable = true)
+    @Inject(method = "findEntities", at = @At("RETURN"), cancellable = true)
     private void ec$resolveNicknameForEntities(
         CommandSourceStack source,
         CallbackInfoReturnable<List<? extends Entity>> cir
     ) {
-        ServerPlayer player = ec$resolveLiteralPlayer(source);
+        if (
+            CONFIG.NICKNAMES_AS_COMMAND_ARG != NicknameCommandArgMode.Everywhere
+            || !cir.getReturnValue().isEmpty()
+        ) {
+            return;
+        }
+
+        ServerPlayer player = NicknameTargetResolver.resolveLiteralPlayer(this.playerName);
         if (player != null) {
-            cir.setReturnValue(Collections.singletonList(player));
+            cir.setReturnValue(List.of(player));
         }
-    }
-
-    private ServerPlayer ec$resolveLiteralPlayer(CommandSourceStack source) {
-        if (this.playerName == null || this.playerName.isBlank()) {
-            return null;
-        }
-
-        // Preserve vanilla username precedence.
-        ServerPlayer usernameMatch = source
-            .getServer()
-            .getPlayerList()
-            .getPlayerByName(this.playerName);
-        if (usernameMatch != null) {
-            return usernameMatch;
-        }
-
-        if (!PlayerDataManager.exists()) {
-            return null;
-        }
-
-        List<PlayerData> matches = PlayerDataManager
-            .getInstance()
-            .getPlayerDataMatchingNickname(this.playerName);
-
-        ServerPlayer nicknameMatch = null;
-        for (PlayerData playerData : matches) {
-            ServerPlayer player = playerData.getPlayer();
-            if (player == null) {
-                continue;
-            }
-            if (nicknameMatch != null && nicknameMatch != player) {
-                // Ambiguous nickname: let vanilla fail rather than selecting
-                // an arbitrary player.
-                return null;
-            }
-            nicknameMatch = player;
-        }
-        return nicknameMatch;
     }
 }
